--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,138 +1,45 @@
-/**index.wxss**/
-@import "../../template/template.wxss";
-
-.nav {
+page {
   width: 100%;
-  height: 100rpx;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 20rpx 33rpx;
-  position: fixed;
-  top: 0;
-  z-index: 10;
-  background-color: RGBA(255, 255, 255, 1);
+  height: 100%;
 }
 
-.nav_bar {
-  flex-grow: 1;
+.draw_container {
+  width: 750rpx;
   height: 100%;
-  box-sizing: border-box;
-  font-size: 28rpx;
   font-family: PingFang-SC-Medium;
-  color: RGBA(102, 102, 102, 1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 3rpx solid RGBA(255, 255, 225, 1);
+  overflow-x: hidden;
+  position: relative;
 }
 
-.nav_active {
-  color:RGBA(152, 97, 225, 1);
-  border-bottom: 3rpx solid RGBA(152, 97, 225, 1);
+.draw_box {
+  width: 132rpx;
+  height: 131rpx;
+  margin: 269rpx auto 0;
+  border-radius: 20rpx;
+  background: linear-gradient(to bottom, #8200fd, #cb00fc);
 }
 
-.mySwiper {
-  width: 100%;
-  height: 360rpx;
+.draw_text{
+  display: block;
+ text-align: center;
+ font-size: 36rpx;
+ color: #000000;
+ margin-top: 39rpx;
+ line-height: 36rpx;
 }
-
-.mySwiper .slide-image {
-  width: 100%;
-  height: 100%;
-}
-
-.wrap {
+.draw_btn{
   position: absolute;
-  box-sizing: border-box;
-  top: 100rpx;
-  bottom: 0rpx; 
-}
-
-.select_Group {
-  width: 100%;
-  min-height: 88rpx;
-  border-bottom: 5rpx solid RGBA(235, 235, 235, 1);
-  box-sizing: border-box;
-}
-.select_head{
-   width:auto; 
-  height: 88rpx;
-   display: flex; 
-  align-items: center;
-  border-bottom: 1rpx solid RGBA(235, 235, 235, 1);
-  /* overflow-y:auto;  */
-  flex-wrap: nowrap;
-  overflow-x: scroll
-}
-.selectone_item {
-  box-sizing: border-box;
-  padding: 16rpx 22rpx;
-  height: 56rpx;
-  font-size: 24rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(153, 153, 153, 1);
-  display: inline-block; 
-  margin-left: 24rpx;
-  border-radius: 28rpx;
-  line-height: 24rpx;
-}
-.icon-xiangxia{
-  font-size: 24rpx;
-}
-.select_more{
-  display: flex;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-  padding-top:0rpx;
-  padding-bottom: 15rpx;
-  padding-left: 15rpx;
-  padding-right: 35rpx;
-}
-
-.select_more_item{
-  width: 120rpx;
-  height: 66rpx;
-  box-sizing: border-box;
-  border: 1rpx solid RGBA(235, 235, 235, 1);
-  margin-top: 16rpx;
-  margin-left: 20rpx;
-
-  font-size:24rpx;
+  width: 520rpx;
+  height: 80rpx;
+  display: block;
   text-align: center;
-  line-height: 66rpx;
-font-family:PingFang-SC-Medium;
-color:rgba(153,153,153,1);
-}
-.demandselect_head{
-   width: 100%;
-  height: 88rpx;
-  display: flex;
-  align-items: center;
-  flex-grow: 1;
-  justify-content: space-between;
-  box-sizing: border-box;
-  padding: 0rpx 30rpx;
-  border-bottom: 1rpx solid RGBA(235, 235, 235, 1);
-}
-
-.demandselect_item{
-  line-height: 60rpx;
-  width: 190rpx;
-  height: 60rpx;
-  box-sizing: border-box;
-  font-size: 24rpx;
-  font-family: PingFang-SC-Medium;
-  color: rgba(153, 153, 153, 1);
-  border-radius: 28rpx;
-  text-align: center;
-}
-.demandselect_item_active{
-  background-color:RGBA(152, 97, 225, 1); 
-  color: RGBA(255, 255, 255, 1);
-}
-
-.selectone_itemActive{
-  background-color: RGBA(152, 97, 225, 1);
-  color:RGBA(255, 255, 225, 1);
+  line-height: 80rpx;
+  color:#ffffff;
+  font-size: 32rpx;
+  background: linear-gradient(to bottom ,#8200FD,#CB00FC);
+  bottom: 176rpx;
+  left:0;
+  right:0;
+  margin: 0 auto;
+  border-radius: 40rpx;
 }
