--- a/pages/personl/gift_Shop/gift_Shop.wxss
+++ b/pages/personl/gift_Shop/gift_Shop.wxss
@@ -5,9 +5,12 @@ page {
 }
 
 .wrap {
+  position: absolute;
   width: 100%;
   height: auto;
-  margin-top: 8rpx;
+  top: 8rpx;
+  bottom: 100rpx;
+  overflow-y: scroll;
 }
 
 .item {
@@ -22,14 +25,45 @@ page {
   justify-content: space-between;
 }
 
+.item_main{
+  width: 90%;
+  height: 218rpx;
+  background-color: rgba(255, 255, 255, 1);
+  margin-top: 8rpx;
+  box-sizing: border-box;
+  /* padding: 24rpx; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .item_logo {
   width: 170rpx;
   height: 170rpx;
   border: 1rpx solid RGBA(235, 235, 235, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+.logoImg{
+  width:140rpx;
+  height:140rpx;
+}
+.check{
+   width:32rpx;
+  height: 32rpx;
+  border: 1rpx solid rgba(51, 51, 51, 1);
+}
+.checked{
+  width:32rpx;
+  height: 32rpx;
+  background-image: url('http://xiangyu.wx.bronet.cn/images/check.png');
+  background-size: 100% 100%;
+  border: 1rpx solid rgba(51, 51, 51, 1);
+}
 .item_res {
-  width: 500rpx;
+  width: 420rpx;
   height: 170rpx;
   display: flex;
   flex-direction: column;
@@ -95,4 +129,17 @@ page {
 
 .icon-icon_add, .icon-jianhao1 {
   font-size: 30rpx;
+}
+
+
+.submit{
+ position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100rpx;
+  background-color: RGBA(74, 144, 226, 1);
+  text-align: center;
+  line-height:100rpx;
+  font-size: 32rpx;
+  color: rgba(245, 245, 245, 1)
 }
