--- a/template/template.wxss
+++ b/template/template.wxss
@@ -314,6 +314,11 @@
   position: absolute;
   bottom: 0;
   background-color: rgba(152, 97, 225, 0.6);
+  font-size: 26rpx;
+  font-family: PingFang-SC-Medium;
+  color: rgba(255, 255, 255, 1);
+  text-align: center;
+  line-height: 60rpx;
 }
 
 .demindtanthur_Group {
