--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <view class='draw_container'>
-  <view class='draw_box'>
-  </view>
+  <image class='draw_box' src='../../img/group1@2x.png'>
+  </image>
   <text class='draw_text'>分享生活，让彼此相遇</text>
   <button class='draw_btn' open-type="getUserInfo" bindgetuserinfo="userInfoHandler">立即进入</button>
 </view>
