--- a/pages/Collection/Collection.wxml
+++ b/pages/Collection/Collection.wxml
@@ -35,7 +35,7 @@
 <scroll-view scroll-y enable-back-to-top bindscrolltolower="scrolltolower" style='width:100%;height:{{scrollView.height}};' class='wrap' wx:elif="{{index==2}}">
   <view class='InterestGroup'>
     <block wx:for="{{note}}" wx:key="">
-      <template is="Interestitem" data="{{...item}}" wx:if="{{index%2==1}}"></template>
+      <template is="Interestitem" data="{{...item}}"></template>
     </block>
   </view>
 </scroll-view>
@@ -44,7 +44,7 @@
 <scroll-view scroll-y enable-back-to-top bindscrolltolower="scrolltolower" style='width:100%;height:{{scrollView.height}};' class='wrap' wx:elif="{{index==3}}">
   <view class='InterestGroup'>
     <block wx:for="{{note}}" wx:key="">
-      <template is="deminditem" data="{{...item}}" wx:if="{{index%2==1}}"></template>
+      <template is="deminditem" data="{{...item}}"></template>
     </block>
   </view>
 </scroll-view>
@@ -53,7 +53,7 @@
 <scroll-view scroll-y enable-back-to-top bindscrolltolower="scrolltolower" style='width:100%;height:{{scrollView.height}};' class='wrap' wx:elif="{{index==4}}">
   <view class='InterestGroup'>
     <block wx:for="{{note}}" wx:key="">
-      <template is="deminditem" data="{{...item}}" wx:if="{{index%2==1}}"></template>
+      <template is="deminditem" data="{{...item}}"></template>
     </block>
   </view>
 </scroll-view>
