--- a/pages/Release/Push_active/Push_active.wxml
+++ b/pages/Release/Push_active/Push_active.wxml
@@ -1,45 +1,49 @@
 <!--pages/Release/push_experience/push_experience.wxml-->
+<!--发布共享经验-->
+
+<view class='ipt_title'>
+  <view class='title'>
+    请输入标题
+  </view>
+  <input class='title_ipt' maxlength='20' bindinput='getTitle'>
+
+  </input>
+</view>
 <import src="../../../template/template.wxml" />
 <!--上传封面图  -->
-<input class='iptTitle' placeholder='请输入标题'>
+<view wx:if="{{!audioshow}}">
 
-</input>
 <template is="upload_img" data="{{...img}}"></template>
 <!--内容编辑  -->
-<template is="textall" data="{{...text}}"></template>
+<template is="textall" data="{{...text}}" wx:if="{{showtext}}"></template>
+<!--我添加的音频-->
+<template is="myaudio" data="{{...myaudio}}" wx:if="{{myaudio!=null}}"></template>
+<!--我添加的视频-->
+<template is="myvideo" data="{{...myvideo}}" wx:if="{{myvideo.videoSrc!=null}}"></template>
 <!--选择发布方式-->
-<template is="selet_group" data="{{...select}}"></template>
+
+<template is="upimg" data="{{...myimg}}" wx:if="{{myimg.imgSrc!=null}}"></template>
+<template is="anthurPro" data='{{...description}}'></template>
+<view>
+  <template is="selet_group" data="{{...select}}"></template>
+</view>
 <!--所在位置  -->
 <template is="myadder" data="{{...adder}}"></template>
 <!--送礼设置  -->
-<template is="switch" data="{{...switch}}"></template> 
+<template is="switch" data="{{...switch}}"></template>
 <!--购买享遇币  -->
-<template is="buy_Group" data="{{...bug}}"></template>
+<template is="buy_Group" data="{{...bugGroup}}"  wx:if="{{sendgift}}"></template>
+<!--购买享遇币  -->
+<template is="buy" data="{{...bug}}"></template>
+</view>
 <!--录音组件 -->
-<!-- <template is="up_audio_group" data="{{...audio}}"></template>   -->
-<!--发布者介绍  -->
-<!-- <template is="anthurPro" data="{{...anthur}}"></template>  -->
-<!--选择种类  -->
-<!-- <template is="allkind" data="{{...kind}}"></template> -->
-<!--物品价格  -->
-<!-- <template is="allprice" data="{{...price}}"></template>   -->
-
-<!--输入跑腿内容  -->
-<!-- <template is="run"></template>  -->
-<!--送达地址  -->
-<!-- <template is="alladder"></template>  -->
-<!--其他需求  -->
-<!-- <template is="otherneed"></template>  -->
-<!--联系人信息  -->
-<!-- <template is="tellGroup"></template>  -->
-<!--打赏  -->
-<!-- <template is="Tip"></template>  -->
-
+<view class='audio_group' wx:if="{{audioshow}}">
+  <template is="audio_group" data="{{...audio}}" wx:if="{{showaudio}}"></template>
+  <template is="up_audio_group" data="{{...audio}}" wx:if="{{!showaudio}}"></template>
+</view>
+<view wx:if="{{!audioshow}}">
 <!--留位置专用  -->
- <view class='kong'></view> 
+<view class='kong'></view>
 <!--发布  -->
- <template is="push"></template>  
-
-
-
-
+<template is="push" wx:if="{{!audioshow}}"></template>
+</view>
