--- a/pages/index/run/run.wxss
+++ b/pages/index/run/run.wxss
@@ -198,7 +198,7 @@ page {
   width: 90rpx;
   height: 90rpx;
   border-radius: 50%;
-  background-color: red;
+  background-color:RGBA(176, 176, 176, 1); 
   box-sizing: border-box;
 }
 
