--- a/pages/personl/fans/fans.wxml
+++ b/pages/personl/fans/fans.wxml
@@ -3,9 +3,9 @@
   <view class='fans_title'>{{item.user_nickname}}
     <text class='iconfont icon-nv' wx:if="{{item.sex==1}}"></text>
     <text class='iconfont icon-nan' wx:if="{{item.sex==0}}"></text> </view>
-  <view class='fans_type' bindtap='gzone'  data-id="{{item.id}}">
-    <text class='iconfont icon-guanzhu1' wx:if="{{isgz}}"></text>
-    <text class='iconfont icon-quxiaoguanzhux' wx:if="{{!isgz}}"></text> {{gztype}}  
+  <view class='fans_type' bindtap='gzone'  data-id="{{item.id}}" data-index='{{index}}'>
+    <text class='iconfont icon-guanzhu1' wx:if="{{item.is_each==0}}"></text>
+    <text class='iconfont icon-quxiaoguanzhux' wx:if="{{item.is_each==1}}"></text> {{item.gztype}} 
   </view>
     <!-- 添加关注</view> -->
 </view>
