--- a/pages/personl/push/push.wxml
+++ b/pages/personl/push/push.wxml
@@ -16,16 +16,16 @@
 <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" style="width:{{systemInfo.windowWidth}}px;height:{{systemInfo.windowHeight}}px;" bindchange="finish" current='{{index}}'>
   <swiper-item>
     <scroll-view class='scrollView' style="width:{{systemInfo.windowWidth}}px;height:{{systemInfo.windowHeight}}px;">
-      <view class='s_item'>
-        <image class='s_item_logo'></image>
+      <view class='s_item' wx:for="{{myShare}}" bindtap='share' data-id='{{item.id}}'>
+        <image class='s_item_logo' src='{{item.thumb}}'></image>
         <view class='s_item_res'>
           <view class='s_item_res_title'>
-            <view class='s_title'>我的养猫日记</view>
+            <view class='s_title'>{{item.title}}</view>
             <view class='s_mintitle'>
               <text class='iconfont icon-icon'></text>删除</view>
           </view>
-          <view class='s_item_res_data'>2018-02-28 8:00</view>
-          <view class='s_item_res_mintitle'>25人参与、45人阅读、55人收藏、30人分享</view>
+          <view class='s_item_res_data'>{{item.create_time}}</view>
+          <view class='s_item_res_mintitle'>{{item.join}}人参与、{{item.view}}人阅读、{{item.favorite}}人收藏、{{item.share}}人分享</view>
         </view>
       </view>
     </scroll-view>
@@ -34,16 +34,16 @@
 
   <swiper-item>
     <scroll-view class='scrollView' style="width:{{systemInfo.windowWidth}}px;height:{{systemInfo.windowHeight}}px;">
-      <view class='s_item'>
-        <image class='s_item_logo' style='width:249rpx'></image>
+      <view class='s_item' wx:for="{{myInterest}}" bindtap='lookinterset' data-id='{{item.id}}'>
+        <image class='s_item_logo' style='width:249rpx' src='{{item.thumb}}'></image>
         <view class='s_item_res' style='width:420rpx'>
           <view class='s_item_res_title'>
-            <view class='s_title'>我的养猫日记</view>
+            <view class='s_title'>{{item.title}}</view>
             <view class='s_mintitle'>
               <text class='iconfont icon-icon'></text>删除</view>
           </view>
-          <view class='s_item_res_data'>2018-02-28 8:00</view>
-          <view class='s_item_res_mintitle'>25人参与、45人阅读、55人收藏、30人分享</view>
+          <view class='s_item_res_data'>{{item.create_time}}</view>
+          <view class='s_item_res_mintitle'>{{item.join}}人参与、{{item.view}}人阅读、{{item.favorite}}人收藏、{{item.share}}人分享</view>
         </view>
       </view>
     </scroll-view>
@@ -51,16 +51,16 @@
 
   <swiper-item>
     <scroll-view class='scrollView' style="width:{{systemInfo.windowWidth}}px;height:{{systemInfo.windowHeight}}px;">
-      <view class='x_item'>
-        <image class='x_item_logo'></image>
+      <view class='x_item' wx:for="{{myNeed}}">
+        <image class='x_item_logo' src='{{item.thumb}}'></image>
         <view class='x_item_res'>
           <view class='x_item_res_title'>
-            <view class='x_title'>我的养猫日记</view>
-            <view class='x_run'>跑</view>
+            <view class='x_title'>{{item.title}}</view>
+            <view class='x_run'>{{item.table}}</view>
           </view>
-          <view class='x_item_res_data'>2018-02-28 8:00</view>
+          <view class='x_item_res_data'>{{item.create_time}}</view>
           <view class='x_item_res_mintitle'>
-            <text class='paple'>未完成</text> 45人阅读、30人评论
+            <text class='paple'>未完成</text> {{item.view}}人阅读、{{item.view}}人评论
             <view class='x_mintitle'>
               <text class='iconfont icon-icon'></text>删除</view>
           </view>
